kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  backend-deployment
  namespace: default
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name:  backend
        image:  ghcr.io/orestis-apostolou/crowdfunding-ansible:backend-0a052d7
        livenessProbe:
          httpGet:
            path: "/actuator/health/liveness"
            port: 8080
          failureThreshold: 20
          periodSeconds: 10
          initialDelaySeconds: 30
        readinessProbe:
            httpGet:
              path: "/actuator/health/readiness"
              port: 8080
            failureThreshold: 10
            periodSeconds: 10
            initialDelaySeconds: 30
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 512Mi
        ports:
        - containerPort:  8080
          name:  backend
      # imagePullSecrets:
      # - name: registry-credentials
