kubernetes/vue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  frontend
  namespace: default
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name:  frontend
        image:  ghcr.io/orestis-apostolou/crowdfunding-ansible:frontend-352b8b7
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 512Mi
        ports:
        - containerPort: 80
          name:  frontend
      imagePullSecrets:
      - name: registry-credentials
