kubernetes/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend-svc
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: backend
  selector:
    app: backend
  type: ClusterIP
