kubernetes/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend-svc
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      name: frontend
  selector:
    app: frontend
  type: ClusterIP
