kubernetes/spring-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring
  name: spring-svc
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: spring
  selector:
    app: spring
  type: ClusterIP
